--- a/prototype/src/scss/app.scss
+++ b/prototype/src/scss/app.scss
@@ -15,8 +15,8 @@
 @import "components/footer";
 @import "components/breadcrumbs";
 @import "components/landing";
-@import "components/job-listing";
-@import "components/job-detail";
+@import "components/product-listing";
+@import "components/filters";
 @import "components/default";
 @import "components/contact";
 // @import "modules/property-filters";
