--- a/prototype/src/scss/components/navigation.scss
+++ b/prototype/src/scss/components/navigation.scss
@@ -45,6 +45,12 @@
 		line-height: 50px;
 		background-color: $color-dark;
 
+		&:after {
+			content: "";
+			display: table;
+			clear: both;
+		}
+
 		@media(max-width: 660px) {
 			height: 79px;
 			line-height: 79px;
@@ -179,6 +185,12 @@
 		margin: 0;
 		padding: 0 0 0 15px;
 
+		&:after {
+			content: "";
+			display: table;
+			clear: both;
+		}
+
 		li {
 			float: left;
 			position: relative;
@@ -222,6 +234,12 @@
 		margin: 0;
 		padding: 0 15px 0 0;
 
+		&:after {
+			content: "";
+			display: table;
+			clear: both;
+		}
+
 		li {
 			float: left;
 			position: relative;
@@ -230,8 +248,19 @@
 				display: block;
 				color: white;
 				text-align: center;
-				margin: 10px 0 10px 20px;
+				padding: 10px 0 0 20px;
 				transition: all 300ms ease;
+				vertical-align: middle;
+
+				span {
+					line-height: 30px;
+					height: 30px;
+					width: 0;
+					overflow: hidden;
+					display: inline-block;
+					vertical-align: 9px;
+					transition: all 300ms ease;
+				}
 
 				i {
 					font-size: 30px;
@@ -239,9 +268,14 @@
 				}
 
 				&:hover {
-					transform: scale(1.25);
+					
+					span {
+						padding-right: 5px;
+						width: 50px;
+					}
 
 					i {
+						transform: scale(1.25);
 						color: $color-tertiary;
 					}
 
@@ -314,7 +348,7 @@
 		padding: 0;
 		height: 90px;
 		line-height: 90px;
-		margin: 0 0 0 -15px;
+		margin: 0 -25px 0 0;
 		position: relative;
 		z-index: 9999;
 
