--- a/prototype/src/scss/components/product-listing.scss
+++ b/prototype/src/scss/components/product-listing.scss
@@ -80,6 +80,11 @@
             select {
                 width: 180px;
 
+                option[value="null"],
+                option:first-child {
+                    color: grey;
+                }
+
                 &+i {
                     position: absolute;
                     right: 3px;
@@ -120,6 +125,23 @@
             color: $color-primary;
             border-bottom: 2px solid transparent;
             transition: all 250ms ease;
+
+            &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+                color: grey;
+                opacity: 1;
+            }
+            &::-moz-placeholder { /* Firefox 19+ */
+                color: grey;
+                opacity: 1;
+            }
+            &:-ms-input-placeholder { /* IE 10+ */
+                color: grey;
+                opacity: 1;
+            }
+            &:-moz-placeholder { /* Firefox 18- */
+                color: grey;
+                opacity: 1;
+            }
 
             &[type="submit"] {
                 margin: 0 0 0 -4px;
