add product single page

--- a/prototype/src/scss/app.scss
+++ b/prototype/src/scss/app.scss
@@ -16,6 +16,7 @@
 @import "components/breadcrumbs";
 @import "components/landing";
 @import "components/product-listing";
+@import "components/product-detail";
 @import "components/filters";
 @import "components/default";
 @import "components/contact";
