disable box-shadows, add 3 more pages - empty

--- a/prototype/src/scss/components/product-detail.scss
+++ b/prototype/src/scss/components/product-detail.scss
@@ -4,8 +4,8 @@
     padding: 30px;
     display: flex;
     flex-wrap: nowrap;
-    -webkit-box-shadow: 0 0 7px 0 rgba(black, 0.3);
-    box-shadow: 0 0 7px 0 rgba(black, 0.3);
+    // -webkit-box-shadow: 0 0 7px 0 rgba(black, 0.3);
+    // box-shadow: 0 0 7px 0 rgba(black, 0.3);
 
     &__image {
         flex-basis: 66.66666%;
