--- a/prototype/src/scss/components/landing.scss
+++ b/prototype/src/scss/components/landing.scss
@@ -1,12 +1,12 @@
 .home {
-	margin: 50px 0;
-	-webkit-box-shadow: 0 0 7px 0 rgba(black, 0.3);
-	box-shadow: 0 0 7px 0 rgba(black, 0.3);
+	margin: 30px 0;
+	// -webkit-box-shadow: 0 0 7px 0 rgba(black, 0.3);
+	// box-shadow: 0 0 7px 0 rgba(black, 0.3);
 	transition: all 300ms ease;
 
 	&:hover {
-		-webkit-box-shadow: 0 0 15px 0 rgba(black, 0.4);
-		box-shadow: 0 0 15px 0 rgba(black, 0.4);
+		-webkit-box-shadow: 0 0 15px 0 rgba(black, 0.1);
+		box-shadow: 0 0 15px 0 rgba(black, 0.1);
 
 		img {
 			transform: scale(1.1);
