--- a/prototype/src/scss/components/product-listing.scss
+++ b/prototype/src/scss/components/product-listing.scss
@@ -9,8 +9,8 @@
         background-color: white;
         height: auto;
         padding: 20px 20px 0 20px;
-        -webkit-box-shadow: 0 0 7px 0 rgba(black, 0.3);
-        box-shadow: 0 0 7px 0 rgba(black, 0.3);
+        // -webkit-box-shadow: 0 0 7px 0 rgba(black, 0.3);
+        // box-shadow: 0 0 7px 0 rgba(black, 0.3);
 
         .title {
             font-size: 20px;
@@ -42,8 +42,8 @@
         margin-left: 30px;
         margin-bottom: 30px;
         flex-basis: calc(100% - 30px);
-        -webkit-box-shadow: 0 0 7px 0 rgba(black, 0.3);
-        box-shadow: 0 0 7px 0 rgba(black, 0.3);
+        // -webkit-box-shadow: 0 0 7px 0 rgba(black, 0.3);
+        // box-shadow: 0 0 7px 0 rgba(black, 0.3);
 
         form {
             display: block;
@@ -214,15 +214,15 @@
                 background-color: white;
                 display: block;
                 position: relative;
-                -webkit-box-shadow: 0 0 7px 0 rgba(black, 0.3);
-                box-shadow: 0 0 7px 0 rgba(black, 0.3);
+                // -webkit-box-shadow: 0 0 7px 0 rgba(black, 0.3);
+                // box-shadow: 0 0 7px 0 rgba(black, 0.3);
                 transition: all 300ms ease;
                 text-align: center;
                 cursor: pointer;
 
                 &:hover {
-                    -webkit-box-shadow: 0 0 15px 0 rgba(black, 0.4);
-                    box-shadow: 0 0 15px 0 rgba(black, 0.4);
+                    -webkit-box-shadow: 0 0 15px 0 rgba(black, 0.1);
+                    box-shadow: 0 0 15px 0 rgba(black, 0.1);
 
                     img {
                         transform: scale(1.1);
