--- a/prototype/src/scss/components/landing.scss
+++ b/prototype/src/scss/components/landing.scss
@@ -27,6 +27,7 @@
 
 		.image {
 			overflow: hidden;
+			margin: 10px;
 
 			img {
 				transition: all 300ms ease;
@@ -90,6 +91,11 @@
 
 		.image {
 			overflow: hidden;
+			margin: 10px;
+
+			&:last-of-type {
+				margin-left: 0;
+			}
 
 			img {
 				transition: all 300ms ease;
