--- a/prototype/src/scss/components/navigation.scss
+++ b/prototype/src/scss/components/navigation.scss
@@ -1,10 +1,12 @@
 .main-navigation {
 	display: block;
-	position: relative;
+	position: fixed;
+	top: 0;
 	height: 140px;
 	width: 100%;
 	background-color: $color-light;
 	padding: 0;
+	z-index: 999999999999999999;
 	-webkit-box-shadow: 5px 0 10px 0px rgba(black, 0.1);
 	box-shadow: 5px 0 10px 0px rgba(black, 0.1);
 
