--- a/prototype/src/scss/components/product-listing.scss
+++ b/prototype/src/scss/components/product-listing.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-wrap: nowrap;
     align-items: flex-start;
-    padding: 50px 0 0 0;
+    padding: 30px 0 0 0;
 
     &__filters {
         flex-basis: calc(25% - 40px);
@@ -219,6 +219,7 @@
                 transition: all 300ms ease;
                 text-align: center;
                 cursor: pointer;
+                padding-top: 10px;
 
                 &:hover {
                     -webkit-box-shadow: 0 0 15px 0 rgba(black, 0.1);
@@ -234,6 +235,7 @@
 
             .img {
                 overflow: hidden;
+                margin: 0 10px;
 
                 img {
                     transition: all 300ms ease;
