--- a/prototype/src/scss/app.scss
+++ b/prototype/src/scss/app.scss
@@ -20,6 +20,7 @@
 @import "components/filters";
 @import "components/default";
 @import "components/contact";
+@import "components/lookbook";
 // @import "modules/property-filters";
 // @import "modules/property-listing";
 // @import "modules/property-single";
