--- a/prototype/src/scss/components/product-listing.scss
+++ b/prototype/src/scss/components/product-listing.scss
@@ -4,35 +4,35 @@
     align-items: flex-start;
     padding: 30px 0 0 0;
 
-    &__filters {
-        flex-basis: calc(25% - 40px);
-        background-color: white;
-        height: auto;
-        padding: 20px 20px 0 20px;
-        // -webkit-box-shadow: 0 0 7px 0 rgba(black, 0.3);
-        // box-shadow: 0 0 7px 0 rgba(black, 0.3);
+    // &__filters {
+    //     flex-basis: calc(25% - 40px);
+    //     background-color: white;
+    //     height: auto;
+    //     padding: 20px 20px 0 20px;
+    //     // -webkit-box-shadow: 0 0 7px 0 rgba(black, 0.3);
+    //     // box-shadow: 0 0 7px 0 rgba(black, 0.3);
 
-        .title {
-            font-size: 20px;
-            padding-bottom: 10px;
-            margin: 0 0 10px 0;
-            border-bottom: 1px solid $color-tertiary;
-        }
+    //     .title {
+    //         font-size: 20px;
+    //         padding-bottom: 10px;
+    //         margin: 0 0 10px 0;
+    //         border-bottom: 1px solid $color-tertiary;
+    //     }
 
-        ul {
-            margin-bottom: 30px;
+    //     ul {
+    //         margin-bottom: 30px;
 
-            li {
+    //         li {
 
-                a {
-                    font-size: 15px;
-                }
+    //             a {
+    //                 font-size: 15px;
+    //             }
 
-            }
+    //         }
 
-        }
+    //     }
     
-    }
+    // }
 
     &__searchbar {
         display: block;
@@ -204,7 +204,8 @@
     &__products {
         display: flex;
         flex-wrap: wrap;
-        flex-basis: 75%;
+        flex-basis: 100%;
+        margin-left: -30px;
 
         &__item {
             flex-basis: 33.33333%;
@@ -273,10 +274,10 @@
 
     &__pagination {
         display: block;
-        width: 75%;
+        width: 100%;
         line-height: 28px;
-        padding: 12px 0 12px 30px;
-        margin: 20px 0 40px 25%;
+        padding: 12px 0;
+        margin: 20px 0 40px 0;
         text-align: center;
         font-weight: 500;
 
