--- a/prototype/src/scss/components/product-listing.scss
+++ b/prototype/src/scss/components/product-listing.scss
@@ -34,30 +34,30 @@
     
     // }
 
-    &__searchbar {
+    &__sorting {
         display: block;
         position: relative;
-        background-color: white;
-        padding: 15px;
-        margin-left: 30px;
-        margin-bottom: 30px;
-        flex-basis: calc(100% - 30px);
+        // background-color: white;
+        border-bottom: 1px solid $color-dark;
+        padding: 0;
+        margin: 0 15px 30px 15px;
+        flex-basis: 100%;
         // -webkit-box-shadow: 0 0 7px 0 rgba(black, 0.3);
         // box-shadow: 0 0 7px 0 rgba(black, 0.3);
 
-        form {
-            display: block;
-            position: relative;
+        // form {
+        //     display: block;
+        //     position: relative;
 
-            &:after {
-                content: "";
-                display: table;
-                clear: both;
-            }
+        //     &:after {
+        //         content: "";
+        //         display: table;
+        //         clear: both;
+        //     }
 
-        }
+        // }
 
-        .search,
+        .count,
         .sort {
             display: inline-block;
             position: relative;
@@ -70,15 +70,23 @@
 
         }
 
-        .search {
+        .count {
             float: left;
+
+            p {
+                margin: 0!important;
+                font-size: 14px;
+                height: 36px;
+                line-height: 38px;
+            }
+
         }
 
         .sort {
             float: right;
 
             select {
-                width: 180px;
+                width: 220px;
 
                 option[value="null"],
                 option:first-child {
@@ -161,7 +169,7 @@
             &:focus,
             &:active {
                 outline: none;
-                border-color: $color-tertiary;
+                // border-color: $color-tertiary;
             }
         }
 
@@ -204,12 +212,11 @@
     &__products {
         display: flex;
         flex-wrap: wrap;
-        flex-basis: 100%;
-        margin-left: -30px;
+        margin: 0 -15px;
 
         &__item {
             flex-basis: 33.33333%;
-            padding: 0 0 30px 30px;
+            padding: 0 15px 30px 15px;
             
             .content {
                 background-color: white;
