styled cart view

--- a/prototype/src/scss/app.scss
+++ b/prototype/src/scss/app.scss
@@ -21,6 +21,8 @@
 @import "components/default";
 @import "components/contact";
 @import "components/lookbook";
+@import "components/cart";
+
 // @import "modules/property-filters";
 // @import "modules/property-listing";
 // @import "modules/property-single";
