--- a/prototype/src/scss/components/navigation.scss
+++ b/prototype/src/scss/components/navigation.scss
@@ -10,8 +10,8 @@
 	-webkit-box-shadow: 5px 0 10px 0px rgba(black, 0.1);
 	box-shadow: 5px 0 10px 0px rgba(black, 0.1);
 
-	@media(max-width: 660px) {
-		height: 130px;
+	@media(max-width: 767px) {
+		height: 124px;
 	}
 
 	.logo {
@@ -20,7 +20,7 @@
 		display: inline-block;
 		line-height: 90px;
 
-		@media(max-width: 660px) {
+		@media(max-width: 767px) {
 			height: 58px;
 			line-height: 58px;
 		}
@@ -31,7 +31,7 @@
 			width: auto;
 			pointer-events: none;
 
-			@media(max-width: 660px) {
+			@media(max-width: 767px) {
 				height: 58px;
 			}
 
@@ -40,11 +40,11 @@
 	}
 
 	.top {
-		height: 50px;
+		height: 44px;
 		width: 100%;
 		display: block;
 		position: relative;
-		line-height: 50px;
+		line-height: 44px;
 		background-color: $color-dark;
 
 		&:after {
@@ -53,10 +53,10 @@
 			clear: both;
 		}
 
-		@media(max-width: 660px) {
-			height: 79px;
-			line-height: 79px;
-		}
+		// @media(max-width: 660px) {
+		// 	height: 79px;
+		// 	line-height: 79px;
+		// }
 
 	}
 
@@ -80,12 +80,12 @@
 		
 		}
 
-		@media(max-width: 660px) {
-			height: 50px;
-			line-height: 50px;
+		@media(max-width: 767px) {
+			height: 80px;
+			line-height: 80px;
 
 			> div {
-				height: 50px;
+				height: 80px;
 			}
 
 		}
@@ -118,10 +118,10 @@
 		position: relative;
 		transition: all 200ms ease;
 
-		@media(max-width: 660px) {
-			height: 50px;
-			width: 50px;
-			line-height: 50px;
+		@media(max-width: 767px) {
+			height: 44px;
+			width: 44px;
+			line-height: 44px;
 		}
 
 		&:hover {
@@ -145,9 +145,9 @@
 		position: relative;
 		transition: all 250ms ease;
 
-		@media(max-width: 660px) {
-			height: 50px;
-			line-height: 50px;
+		@media(max-width: 767px) {
+			height: 44px;
+			line-height: 44px;
 		}
 		
 		&.active {
@@ -187,6 +187,11 @@
 		margin: 0;
 		padding: 0 0 0 15px;
 
+		@media(max-width: 767px) {
+			height: 44px;
+			line-height: 44px;
+		}
+
 		&:after {
 			content: "";
 			display: table;
@@ -209,6 +214,10 @@
 				margin: 10px 10px 10px 0;
 				font-size: 18px;
 				transition: all 300ms ease;
+
+				@media(max-width: 767px) {
+					margin: 7px 10px 7px 0;
+				}
 
 				i {
 					transition: all 300ms ease;
@@ -236,6 +245,11 @@
 		margin: 0;
 		padding: 0 15px 0 0;
 
+		@media(max-width: 767px) {
+			height: 44px;
+			line-height: 44px;
+		}
+
 		&:after {
 			content: "";
 			display: table;
@@ -253,6 +267,10 @@
 				padding: 10px 0 0 20px;
 				transition: all 300ms ease;
 				vertical-align: middle;
+
+				@media(max-width: 767px) {
+					padding: 7px 0 0 15px;
+				}
 
 				span {
 					line-height: 30px;
@@ -316,7 +334,7 @@
 
 		}
 
-		@media(max-width: 660px) {
+		@media(max-width: 767px) {
 			display: block;
 		
 			&.active {
@@ -342,6 +360,14 @@
 
 		}
 
+	}
+
+	.menu-main-menu-container {
+	
+		@media(max-width: 767px) {
+			display: none;
+		}
+	
 	}
 
 	.menu {
