--- a/prototype/src/scss/components/product-listing.scss
+++ b/prototype/src/scss/components/product-listing.scss
@@ -58,6 +58,10 @@
 
         // }
 
+        @media(max-width: 767px) {
+            margin: 0 8px 30px 8px;
+        }
+
         .count,
         .sort {
             display: inline-block;
@@ -215,9 +219,22 @@
         flex-wrap: wrap;
         margin: 0 -10px;
 
+        @media(max-width: 767px) {
+            margin: 0 -8px;
+        }
+
         &__item {
             flex-basis: 33.3333%;
             padding: 10px;
+
+            @media(max-width: 767px) {
+                flex-basis: 50%;
+                padding: 8px;
+            }
+
+            @media(max-width: 420px) {
+                flex-basis: 100%;
+            }
             
             .content {
                 padding: 10px;
@@ -227,6 +244,10 @@
                 text-align: left;
                 cursor: pointer;
                 background-color: white;
+
+                @media(max-width: 767px) {
+                    padding: 8px;
+                }
 
                 &:hover {
                     -webkit-box-shadow: 0 0 15px 0 rgba(black, 0.1);
