--- a/prototype/src/scss/components/navigation.scss
+++ b/prototype/src/scss/components/navigation.scss
@@ -2,17 +2,13 @@
 	display: block;
 	position: fixed;
 	top: 0;
-	height: 140px;
+	height: 124px;
 	width: 100%;
 	background-color: $color-light;
 	padding: 0;
 	z-index: 999999999999999999;
 	-webkit-box-shadow: 5px 0 10px 0px rgba(black, 0.1);
 	box-shadow: 5px 0 10px 0px rgba(black, 0.1);
-
-	@media(max-width: 767px) {
-		height: 124px;
-	}
 
 	.logo {
 		height: 90px;
@@ -41,10 +37,10 @@
 
 	.top {
 		height: 44px;
+		line-height: 44px;
 		width: 100%;
 		display: block;
 		position: relative;
-		line-height: 44px;
 		background-color: $color-dark;
 
 		&:after {
@@ -52,11 +48,6 @@
 			display: table;
 			clear: both;
 		}
-
-		// @media(max-width: 660px) {
-		// 	height: 79px;
-		// 	line-height: 79px;
-		// }
 
 	}
 
@@ -181,16 +172,11 @@
 	}
 
 	.social {
-		line-height: 50px;
-		height: 50px;
+		height: 44px;
+		line-height: 44px;
 		display: block;
 		margin: 0;
-		padding: 0 0 0 15px;
-
-		@media(max-width: 767px) {
-			height: 44px;
-			line-height: 44px;
-		}
+		padding: 0;
 
 		&:after {
 			content: "";
@@ -211,13 +197,9 @@
 				line-height: 30px;
 				text-align: center;
 				border-radius: 30px;
-				margin: 10px 10px 10px 0;
+				margin: 7px 10px 7px 0;
 				font-size: 18px;
 				transition: all 300ms ease;
-
-				@media(max-width: 767px) {
-					margin: 7px 10px 7px 0;
-				}
 
 				i {
 					transition: all 300ms ease;
@@ -239,16 +221,11 @@
 	}
 
 	.tools {
-		line-height: 50px;
-		height: 50px;
+		height: 44px;
+		line-height: 44px;
 		display: block;
 		margin: 0;
-		padding: 0 15px 0 0;
-
-		@media(max-width: 767px) {
-			height: 44px;
-			line-height: 44px;
-		}
+		padding: 0;
 
 		&:after {
 			content: "";
@@ -264,13 +241,9 @@
 				display: block;
 				color: white;
 				text-align: center;
-				padding: 10px 0 0 20px;
+				padding: 7px 0 0 15px;
 				transition: all 300ms ease;
 				vertical-align: middle;
-
-				@media(max-width: 767px) {
-					padding: 7px 0 0 15px;
-				}
 
 				span {
 					line-height: 30px;
@@ -309,55 +282,30 @@
 	}
 
 	#menu-btn {
-		width: 50px;
-		height: 50px;
-		display: block;
-		text-align: center;
-		margin-left: -12px;
-		cursor: pointer;
 		display: none;
-		line-height: 50px;
-		overflow: hidden;
-		position: relative;
-
-		i {
-			font-size: 32px;
-			transition: all 250ms ease;
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			margin: -16px 0 0 -16px;
-
-			&:nth-child(2) {
-				transform: translateX(150%);
-			}
-
-		}
+		position: absolute;
+		right: 15px;
+		top: 24px;
+		width: 36px;
+		height: auto;
+		cursor: pointer;
 
 		@media(max-width: 767px) {
 			display: block;
-		
-			&.active {
+		}
 
-				i {
+		span {
+			display: block;
+			height: 2px;
+			background-color: $color-dark;
+			margin-bottom: 8px;
+		}
 
-					&:nth-child(1) {
-						transform: translateX(-150%);
-					}
-					
-					&:nth-child(2) {
-						transform: translateX(0);
-					}
-
-				}
-
-				&+.menu {
-					-webkit-box-shadow: 5px 0 20px 5px rgba(black, 0.5);
-					box-shadow: 5px 0 20px 5px rgba(black, 0.5);
-				}
-
-			}
-
+		p {
+			font-size: 12px;
+			font-weight: 500;
+			margin: -1px 0 0 0;
+			line-height: 1;
 		}
 
 	}
@@ -389,7 +337,7 @@
 			margin: 0 0 0 -7px;
 		}
 
-		@media(max-width: 660px) {
+		@media(max-width: 767px) {
 			display: block;
 			float: none;
 			position: fixed;
@@ -433,8 +381,8 @@
 				padding: 0 25px;
 				font-size: 13px;
 				text-transform: uppercase;
-				font-weight: 700;
-				letter-spacing: 1px;
+				font-weight: 500;
+				letter-spacing: 2px;
 				z-index: 9;
 				transition: all 250ms ease;
 
@@ -457,12 +405,12 @@
 				&:after {
 					display: block;
 					position: absolute;
-					bottom: 30px;
+					bottom: 32px;
 					left: 50%;
 					width: 0;
 					height: 2px;
 					content: '';
-					background-color: $color-tertiary;
+					background-color: rgba($color-tertiary, 0.65);
 					transition: all 250ms ease;
 
 					@media(max-width: 660px) {
@@ -475,23 +423,24 @@
 			}
 
 			&:hover,
-			&.active {
+			&.current-menu-item,
+			&.current_page_item {
 
 				a {
 					color: $color-tertiary;
 
 					&:after {
-						width: calc(100% - 52px);
-						left: 26px;
+						width: calc(100% - 50px);
+						left: 25px;
 
 						@media(max-width: 1170px) {
-							width: calc(100% - 32px);
-							left: 16px;
+							width: calc(100% - 30px);
+							left: 15px;
 						}
 
 						@media(max-width: 760px) {
-							width: calc(100% - 11px);
-							left: 11px;
+							width: calc(100% - 10px);
+							left: 10px;
 						}
 
 					}
