--- a/prototype/src/scss/base/layout.scss
+++ b/prototype/src/scss/base/layout.scss
@@ -76,17 +76,16 @@ section {
 }
 
 #wrapper {
-	padding-top: 140px;
+	padding-top: 134px;
 	position: relative;
 	display: block;
 
-	@media(max-width: 660px) {
-		transition: all 250ms ease;
-
-		&.menu-active {
-			transform: translateX(270px);
-		}
-
+	@media(max-width: 767px) {
+		padding-top: 124px;
+	}
+	
+	@media(max-width: 480px) {
+		padding-top: 60px;
 	}
 
 }
@@ -96,10 +95,17 @@ section {
 	margin: 0 auto;
 	padding: 0 15px;
 	display: block;
-	max-width: 1170px;
 
-	@media(max-width: 1170px) {
-		max-width: 990px;
+	@media(min-width: 1441px) {
+		max-width: 1170px;
+	}
+
+	@media(min-width: 1000px) {
+		max-width: 970px;
+	}
+
+	@media(max-width: 767px) {
+		padding: 0 10px;
 	}
 
 	&-sml {
