--- a/prototype/src/scss/components/landing.scss
+++ b/prototype/src/scss/components/landing.scss
@@ -1,12 +1,9 @@
-.home {
-	margin: 30px 0;
-	// -webkit-box-shadow: 0 0 7px 0 rgba(black, 0.3);
-	// box-shadow: 0 0 7px 0 rgba(black, 0.3);
+section.home {
+	margin: 20px 0;
 	transition: all 300ms ease;
 
 	&:hover {
-		-webkit-box-shadow: 0 0 15px 0 rgba(black, 0.1);
-		box-shadow: 0 0 15px 0 rgba(black, 0.1);
+		box-shadow: 0 0 10px 0 rgba(black, 0.1);
 
 		img {
 			transform: scale(1.1);
@@ -19,6 +16,7 @@
 		position: relative;
 		display: flex;
 		flex-wrap: nowrap;
+		border-radius: 6px;
 		
 		.image,
 		.text {
@@ -83,6 +81,7 @@
 		position: relative;
 		display: flex;
 		flex-wrap: nowrap;
+		border-radius: 6px;
 
 		.image,
 		.text {
@@ -138,6 +137,7 @@
 		display: block;
 		text-align: center;
 		background-color: white;
+		border-radius: 6px;
 
 		.title {
 			font-size: 48px;
