--- a/prototype/src/scss/components/navigation.scss
+++ b/prototype/src/scss/components/navigation.scss
@@ -2,13 +2,21 @@
 	display: block;
 	position: fixed;
 	top: 0;
-	height: 124px;
+	height: 134px;
 	width: 100%;
 	background-color: $color-light;
 	padding: 0;
 	z-index: 999999999999999999;
-	-webkit-box-shadow: 5px 0 10px 0px rgba(black, 0.1);
-	box-shadow: 5px 0 10px 0px rgba(black, 0.1);
+	border-bottom: 1px solid $color-light;
+	box-shadow: 0 3px 10px 0px rgba(black, 0.15);
+
+	@media(max-width: 767px) {
+		height: 124px;
+	}
+
+	@media(max-width: 480px) {
+		height: 60px;
+	}
 
 	.logo {
 		height: 90px;
@@ -21,6 +29,11 @@
 			line-height: 58px;
 		}
 
+		@media(max-width: 480px) {
+			height: 60px;
+			line-height: 60px;
+		}
+
 		object,
 		svg {
 			height: 64px;
@@ -29,6 +42,10 @@
 
 			@media(max-width: 767px) {
 				height: 58px;
+			}
+
+			@media(max-width: 480px) {
+				height: 44px;
 			}
 
 		}
@@ -41,7 +58,11 @@
 		width: 100%;
 		display: block;
 		position: relative;
-		background-color: $color-dark;
+		background-color: $color-darker;
+
+		@media(max-width: 480px) {
+			display: none;
+		}
 
 		&:after {
 			content: "";
@@ -81,6 +102,15 @@
 
 		}
 
+		@media(max-width: 480px) {
+			height: 60px;
+			line-height: 60px;
+
+			> div {
+				height: 60px;
+			}
+		}
+
 	}
 
 	.left {
@@ -91,84 +121,6 @@
 	.right {
 		float: right;
 		display: inline-block;
-	}
-
-	.search-btn {
-		width: 60px;
-		display: inline-block;
-		float: left;
-		height: 60px;
-		line-height: 60px;
-		border-left: 1px solid rgba($color-primary, 0.1);
-		background-color: $color-light;
-		text-align: center;
-		font-size: 24px;
-		color: $color-primary;
-		cursor: pointer;
-		z-index: 9;
-		position: relative;
-		transition: all 200ms ease;
-
-		@media(max-width: 767px) {
-			height: 44px;
-			width: 44px;
-			line-height: 44px;
-		}
-
-		&:hover {
-			font-size: 32px;
-		}
-
-		&.active {
-			font-size: 32px;
-			color: $color-tertiary;
-		}
-
-	}
-
-	.search-field {
-		display: inline-block;
-		float: left;
-		height: 60px;
-		line-height: 60px;
-		background-color: $color-light;
-		z-index: 9;
-		position: relative;
-		transition: all 250ms ease;
-
-		@media(max-width: 767px) {
-			height: 44px;
-			line-height: 44px;
-		}
-		
-		&.active {
-			margin-left: -10px;
-			padding-right: 15px;
-			
-			input {
-				width: 150px;
-				opacity: 1;
-			}
-
-		}
-
-		input {
-			border: none;
-			border-bottom: 2px solid $color-tertiary;
-			line-height: 21px;
-			outline: none;
-			-webkit-appearance: none;
-			appearance: none;
-			padding: 0;
-			margin: 0;
-			padding-right: 0;
-			background-color: $color-light;
-			font-size: 14px;
-			width: 0px;
-			opacity: 0;
-			transition: all 250ms ease;
-		}
-
 	}
 
 	.social {
@@ -236,40 +188,101 @@
 		li {
 			float: left;
 			position: relative;
+
+			form {
+				display: block;
+				position: relative;
+
+				label {
+					font-family: $font-secondary;
+					display: inline-block;
+					margin: 0;
+
+					span {
+						display: none;
+					}
+
+					input {
+						font-family: $font-secondary;
+						color: $color-light;
+						font-weight: 500;
+						margin: 8px 0;
+						width: 180px;
+						height: 28px;
+						font-size: 13px;
+						display: block;
+						position: relative;
+						appearance: none;
+						border-radius: 6px;
+						outline: none;
+						border: none;
+						padding: 0;
+						background-color: #444;
+					}
+
+				}
+
+				input[type="submit"] {
+					padding: 0;
+					height: 30px;
+					appearance: none;
+					border-radius: none;
+					outline: none;
+					border: none;
+					display: inline-block;
+					font-size: 12px;
+					margin: 0;
+					font-family: $font-secondary;
+					display: none;
+				}
+
+				&+i {
+					font-size: 24px;
+					display: block;
+					position: absolute;
+					right: 0;
+					top: 8px;
+					padding: 2px 4px;
+					color: white;
+					z-index: 9999;
+					transition: all 300ms ease;
+					cursor: pointer;
+
+					&:hover {
+						color: $color-tertiary;
+					}
+
+				}
+
+			}
 			
 			a {
 				display: block;
 				color: white;
 				text-align: center;
-				padding: 7px 0 0 15px;
+				margin: 1px 0 0 16px;
 				transition: all 300ms ease;
-				vertical-align: middle;
 
 				span {
-					line-height: 30px;
-					height: 30px;
-					width: 0;
-					overflow: hidden;
-					display: inline-block;
-					vertical-align: 9px;
-					font-size: 14px;
+					line-height: 1;
+					height: auto;
+					width: auto;
+					display: block;
+					font-size: 12px;
+					margin-top: -2px;
+					font-weight: 500;
 					transition: all 300ms ease;
 				}
 
 				i {
-					font-size: 30px;
+					font-size: 29px;
+					display: block;
 					transition: all 300ms ease;
 				}
 
 				&:hover {
-					
-					span {
-						padding-right: 5px;
-						width: 50px;
-					}
 
 					i {
-						transform: scale(1.25);
 						color: $color-tertiary;
 					}
 
@@ -285,7 +298,7 @@
 		display: none;
 		position: absolute;
 		right: 15px;
-		top: 24px;
+		top: 26px;
 		width: 36px;
 		height: auto;
 		cursor: pointer;
@@ -294,11 +307,22 @@
 			display: block;
 		}
 
+		@media(max-width: 480px) {
+			top: 20px;
+			width: 32px;
+			right: 10px;
+		}
+
 		span {
 			display: block;
 			height: 2px;
 			background-color: $color-dark;
 			margin-bottom: 8px;
+
+			@media(max-width: 480px) {
+				margin-bottom: 6px;
+			}
+
 		}
 
 		p {
@@ -306,6 +330,11 @@
 			font-weight: 500;
 			margin: -1px 0 0 0;
 			line-height: 1;
+
+			@media(max-width: 480px) {
+				font-size: 11px;
+			}
+
 		}
 
 	}
@@ -313,7 +342,25 @@
 	.menu-main-menu-container {
 	
 		@media(max-width: 767px) {
-			display: none;
+			position: absolute;
+			border-top: 1px solid $color-light;
+			width: 240px;
+			height: 100vh;
+			background: #fafafa;
+			top: 80px;
+			right: -240px;
+			z-index: -1;
+			transition: all 300ms ease;
+
+			@media(max-width: 480px) {
+				top: 60px;
+			}
+
+			&.active {
+				box-shadow: 0 10px 10px 0px rgba(black, 0.1);
+				right: 0;
+			}
+
 		}
 	
 	}
@@ -325,7 +372,7 @@
 		padding: 0;
 		height: 90px;
 		line-height: 90px;
-		margin: 0 -25px 0 0;
+		margin: 0 -15px 0 0;
 		position: relative;
 		z-index: 9999;
 
@@ -333,29 +380,13 @@
 			margin: 0 0 0 -10px;
 		}
 
-		@media(max-width: 760px) {
-			margin: 0 0 0 -7px;
-		}
-
 		@media(max-width: 767px) {
+			margin: 0;
+			height: auto;
+			line-height: 1;
 			display: block;
 			float: none;
-			position: fixed;
-			margin: 0;
-			left: 0;
-			top: 0;
-			bottom: 0;
-			transform: translateX(-270px);
-			width: 270px;
-			min-height: 100%;
-			min-height: 100vh;
-			height: 100%;
-			background-color: $color-primary;
-			transition: all 250ms ease;
-			z-index: 9999;
-			-webkit-box-shadow: 0 0 0 0 $color-primary;
-			box-shadow: 0 0 0 0 $color-primary;
-			overflow-x: hidden;
+			width: 100%;
 		}
 
 		> li {
@@ -365,10 +396,11 @@
 			position: relative;
 			z-index: 9;
 
-			@media(max-width: 660px) {
+			@media(max-width: 767px) {
 				height: auto;
 				line-height: 44px;
 				float: none;
+				border-bottom: 1px solid #ececec;
 			}
 
 			> a {
@@ -378,7 +410,7 @@
 				position: relative;
 				height: 100%;
 				line-height: 90px;
-				padding: 0 25px;
+				padding: 0 15px;
 				font-size: 13px;
 				text-transform: uppercase;
 				font-weight: 500;
@@ -386,20 +418,13 @@
 				z-index: 9;
 				transition: all 250ms ease;
 
-				@media(max-width: 1170px) {
-					padding: 0 15px;
-				}
-
-				@media(max-width: 760px) {
-					padding: 0 10px;
-				}
-
-				@media(max-width: 660px) {
+				@media(max-width: 767px) {
 					height: 44px;
 					line-height: 44px;
 					display: block;
-					color: $color-light;
+					color: $color-primary;
 					padding: 0 15px;
+					transition: none;
 				}
 
 				&:after {
@@ -413,9 +438,10 @@
 					background-color: rgba($color-tertiary, 0.65);
 					transition: all 250ms ease;
 
-					@media(max-width: 660px) {
+					@media(max-width: 767px) {
 						display: none;
 						content: none;
+						transition: none;
 					}
 
 				}
@@ -430,19 +456,18 @@
 					color: $color-tertiary;
 
 					&:after {
-						width: calc(100% - 50px);
-						left: 25px;
-
-						@media(max-width: 1170px) {
-							width: calc(100% - 30px);
-							left: 15px;
-						}
+						width: calc(100% - 30px);
+						left: 15px;
 
 						@media(max-width: 760px) {
 							width: calc(100% - 10px);
 							left: 10px;
 						}
 
+					}
+
+					@media(max-width: 767px) {
+						background-color: white;
 					}
 				
 				}
