--- a/prototype/src/scss/components/product-listing.scss
+++ b/prototype/src/scss/components/product-listing.scss
@@ -4,62 +4,25 @@
     align-items: flex-start;
     padding: 30px 0 0 0;
 
-    // &__filters {
-    //     flex-basis: calc(25% - 40px);
-    //     background-color: white;
-    //     height: auto;
-    //     padding: 20px 20px 0 20px;
-    //     // -webkit-box-shadow: 0 0 7px 0 rgba(black, 0.3);
-    //     // box-shadow: 0 0 7px 0 rgba(black, 0.3);
-
-    //     .title {
-    //         font-size: 20px;
-    //         padding-bottom: 10px;
-    //         margin: 0 0 10px 0;
-    //         border-bottom: 1px solid $color-tertiary;
-    //     }
-
-    //     ul {
-    //         margin-bottom: 30px;
-
-    //         li {
-
-    //             a {
-    //                 font-size: 15px;
-    //             }
-
-    //         }
-
-    //     }
-    
-    // }
+    @media(max-width: 640px) {
+        padding-top: 20px;
+    }
 
     &__sorting {
         display: block;
         position: relative;
-        // background-color: white;
         border-bottom: 1px solid $color-dark;
         padding: 0;
-        margin: 0 10px 30px 10px;
+        margin: 0 10px 20px 10px;
         flex-basis: 100%;
         width: 100%;
-        // -webkit-box-shadow: 0 0 7px 0 rgba(black, 0.3);
-        // box-shadow: 0 0 7px 0 rgba(black, 0.3);
-
-        // form {
-        //     display: block;
-        //     position: relative;
-
-        //     &:after {
-        //         content: "";
-        //         display: table;
-        //         clear: both;
-        //     }
-
-        // }
 
         @media(max-width: 767px) {
-            margin: 0 8px 30px 8px;
+            margin: 0 8px 20px 8px;
+        }
+
+        @media(max-width: 640px) {
+            margin: 0 8px 20px 8px;
         }
 
         .count,
@@ -78,11 +41,22 @@
         .count {
             float: left;
 
+            @media(max-width: 400px) {
+                float: none;
+                display: block;
+
+            }
+
             p {
                 margin: 0!important;
                 font-size: 14px;
                 height: 36px;
                 line-height: 38px;
+
+                @media(max-width: 400px) {
+                    font-size: 14px;
+                }
+
             }
 
         }
@@ -90,8 +64,24 @@
         .sort {
             float: right;
 
+            @media(max-width: 400px) {
+                display: block;
+                width: 100%;
+            }
+
             select {
-                width: 220px;
+                width: 185px;
+                padding: 0;
+                cursor: pointer;
+
+                @media(max-width: 400px) {
+                    width: 180px;
+                    font-size: 14px;
+                    padding: 0;
+                    float: none;
+                    display: block;
+                    width: 100%;
+                }
 
                 option[value="null"],
                 option:first-child {
@@ -100,20 +90,10 @@
 
                 &+i {
                     position: absolute;
-                    right: 3px;
-                    bottom: 6px;
+                    right: -3px;
+                    bottom: 5px;
                     pointer-events: none;
                     transition: all 200ms ease;
-                }
-
-                &:hover {
-                    color: $color-tertiary;
-
-                    &+i {
-                        bottom: 3px;
-                        color: $color-tertiary;
-                    }
-
                 }
 
             }
@@ -139,19 +119,10 @@
             border-bottom: 2px solid transparent;
             transition: all 250ms ease;
 
-            &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-                color: grey;
-                opacity: 1;
-            }
-            &::-moz-placeholder { /* Firefox 19+ */
-                color: grey;
-                opacity: 1;
-            }
-            &:-ms-input-placeholder { /* IE 10+ */
-                color: grey;
-                opacity: 1;
-            }
-            &:-moz-placeholder { /* Firefox 18- */
+            &::-webkit-input-placeholder,
+            &:-ms-input-placeholder,
+            &::-moz-placeholder,
+            &:-moz-placeholder {
                 color: grey;
                 opacity: 1;
             }
@@ -223,6 +194,10 @@
             margin: 0 -8px;
         }
 
+        @media(max-width: 480px) {
+            margin: 0 -5px;
+        }
+
         &__item {
             flex-basis: 33.3333%;
             padding: 10px;
@@ -232,8 +207,12 @@
                 padding: 8px;
             }
 
-            @media(max-width: 420px) {
-                flex-basis: 100%;
+            @media(max-width: 480px) {
+                padding: 10px 5px;
+            }
+
+            a {
+                display: block;
             }
             
             .content {
@@ -244,9 +223,14 @@
                 text-align: left;
                 cursor: pointer;
                 background-color: white;
+                border-radius: 6px;
 
                 @media(max-width: 767px) {
                     padding: 8px;
+                }
+
+                @media(max-width: 480px) {
+                    padding: 5px;
                 }
 
                 &:hover {
@@ -265,9 +249,15 @@
             .img {
                 overflow: hidden;
                 margin: 0;
+                display: block;
+                border-radius: 6px;
+                position: relative;
 
                 img {
                     transition: all 300ms ease;
+                    border-radius: 6px;
+                    position: relative;
+                    display: block;
                 }
 
             }
@@ -277,6 +267,12 @@
                 flex-wrap: nowrap;
                 justify-content: space-between;
                 margin-top: 10px;
+
+                @media(max-width: 480px) {
+                    flex-wrap: wrap;
+                    justify-content: flex-start;
+                    margin-top: 5px;
+                }
             
                 .title {
                     font-size: 15px;
@@ -285,6 +281,14 @@
                     margin: 0;
                     letter-spacing: 1px;
                     display: inline-block;
+
+                    @media(max-width: 480px) {
+                        font-size: 13px;
+                        display: block;
+                        width: 100%;
+                        padding-right: 0;
+                    }
+
                 }
     
                 hr {
@@ -305,6 +309,13 @@
                     display: inline-block;
                     position: relative;
                     text-align: right;
+
+                    @media(max-width: 480px) {
+                        font-size: 13px;
+                        text-align: left;
+                        margin-top: 3px;
+                    }
+
                 }
                 
             }
