--- a/prototype/src/scss/app.scss
+++ b/prototype/src/scss/app.scss
@@ -22,6 +22,7 @@
 @import "components/contact";
 @import "components/lookbook";
 @import "components/cart";
+@import "components/login";
 
 // @import "modules/property-filters";
 // @import "modules/property-listing";
