--- a/prototype/src/scss/base/layout.scss
+++ b/prototype/src/scss/base/layout.scss
@@ -220,3 +220,23 @@ section {
 	}
 
 }
+
+.woocommerce-message {
+	margin: 30px 0;
+	padding: 20px;
+	background-color: white;
+	border-radius: 6px;
+	box-shadow: 0 0 10px 0 rgba(black, 0.1);
+
+	a {
+		font-weight: 700;
+		color: $color-tertiary;
+		margin-right: 5px;
+
+		&:hover {
+			text-decoration: underline;
+		}
+
+	}
+
+}
