--- a/prototype/src/scss/components/cart.scss
+++ b/prototype/src/scss/components/cart.scss
@@ -21,7 +21,7 @@
             }
 
             .item-quantity {
-                flex-basis: 200px;
+                flex-basis: 160px;
                 border-bottom: 1px solid black;
                 margin: 10px;
             }
@@ -39,7 +39,7 @@
             flex-wrap: nowrap;
 
             .photo {
-                flex-basis: 160px;
+                flex-basis: 164px;
                 padding: 10px;
             }
 
@@ -50,8 +50,8 @@
             }
 
             .quantity {
-                flex-basis: 220px;
-                padding: 10px;
+                flex-basis: 160px;
+                margin: 10px;
             }
 
             .price {
