--- a/prototype/src/scss/components/login.scss
+++ b/prototype/src/scss/components/login.scss
@@ -1,9 +1,24 @@
+.woocommerce-checkout {
+    
+    form.login {
+        margin: 30px 0;
+
+        > p:first-child {
+            font-size: 14px;
+            margin-top: 0;
+            margin-bottom: 30px;
+        }
+
+    }
+
+}
+
 form.login {
     max-width: 400px;
     padding: 30px;
     border-radius: 6px;
     background-color: white;
-    margin: 30px auto;
+    margin: 90px auto;
     box-shadow: 0 0 10px 0 rgba(black, 0.1);
     font-family: $font-secondary;
 
