remove slider if no more than one image

--- a/prototype/src/scss/base/layout.scss
+++ b/prototype/src/scss/base/layout.scss
@@ -79,6 +79,7 @@ section {
 	padding-top: 134px;
 	position: relative;
 	display: block;
+	min-height: calc(100vh - 400px);
 
 	@media(max-width: 767px) {
 		padding-top: 124px;
