--- a/prototype/src/scss/base/variables.scss
+++ b/prototype/src/scss/base/variables.scss
@@ -104,3 +104,11 @@ $color-darker: #232323;
 $font-primary: 'Oranienbaum', serif;
 $font-secondary: 'PT Sans', sans-serif;
 $font-secondary: 'Helvetica Neue', sans-serif;
+
+@mixin clearfix {
+	&:after {
+		content: "";
+		display: table;
+		clear: both;
+	}
+}
