--- a/prototype/src/scss/components/navigation.scss
+++ b/prototype/src/scss/components/navigation.scss
@@ -450,7 +450,8 @@
 
 			&:hover,
 			&.current-menu-item,
-			&.current_page_item {
+			&.current_page_item,
+			&.current_page_parent {
 
 				a {
 					color: $color-tertiary;
