--- a/prototype/src/scss/components/navigation.scss
+++ b/prototype/src/scss/components/navigation.scss
@@ -486,10 +486,11 @@
 			.sub-menu {
 				position: absolute;
 				top: 90px;
+				margin-left: -7px;
 				background-color: white;
 				width: auto;
 				list-style: none;
-				padding: 5px 10px;
+				padding: 5px 12px;
 				transition: all 300ms ease;
 				display: none;
 				z-index: 9999;
