--- a/prototype/src/scss/components/product-listing.scss
+++ b/prototype/src/scss/components/product-listing.scss
@@ -3,6 +3,7 @@
     flex-wrap: nowrap;
     align-items: flex-start;
     padding: 30px 0 0 0;
+    margin-bottom: 40px;
 
     @media(max-width: 640px) {
         padding-top: 20px;
@@ -329,7 +330,7 @@
         width: 100%;
         line-height: 26px;
         padding: 12px 0;
-        margin: 20px 0 40px 0;
+        margin: 0 0 40px 0;
         text-align: center;
         font-weight: 500;
 
