--- a/prototype/src/scss/components/landing.scss
+++ b/prototype/src/scss/components/landing.scss
@@ -151,10 +151,14 @@ section.home {
 
 		.comment {
 			margin-bottom: 5px;
+			font-size: 18px;
+			font-weight: 400;
 		}
 
 		.author {
 			margin-top: 5px;
+			font-size: 16px;
+			font-weight: 500;
 		}
 
 		#comments-carousel {
